# whatsapp-cloud-api-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTES.md  README.md
src/: error.rs  lib.rs  whatsapp_client.rs  whatspapp_client.rs
src/models/: component.rs  image_message.rs  interactive_message.rs  media_response.rs  message.rs  message_response.rs  mod.rs  phone_number.rs  template.rs  template_message.rs  text_message.rs  webhooks.rs
tests/: phone_number_tests.rs  send_message_tests.rs
