[package]
name = "whatsapp-cloud-api"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Whatsapp Cloud API Rust Client"
homepage = "https://github.com/sajuthankappan/whatsapp-cloud-api-rs"
repository = "https://github.com/sajuthankappan/whatsapp-cloud-api-rs"
readme = "README.md"
keywords = ["whatsapp"]
categories = ["api-bindings"]

[dependencies]
log = "0.4.17"
reqwest = { version = "0.11.10", features = ["json"]}
serde = { version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"


[dev-dependencies]
dotenv = "0.15.0"
env_logger = "0.9.0"
tokio = { version = "1.18.2", features=["full"]}
