[package]
name = "whatsapp-cloud-api"
version = "0.4.7"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Whatsapp Cloud API Rust Client"
homepage = "https://github.com/sajuthankappan/whatsapp-cloud-api-rs"
repository = "https://github.com/sajuthankappan/whatsapp-cloud-api-rs"
readme = "README.md"
keywords = ["whatsapp"]
categories = ["api-bindings"]

[dependencies]
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json"]}
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"


[dev-dependencies]
dotenv = "0.15.0"
env_logger = "0.10.1"
tokio = { version = "1.34.0", features=["full"]}
